# ProgrammingExercises

./: README.md
C/: README.md
C++/: README.md
CMake/: CMakeLists.txt  projectBuilder.ps1  projectBuilder.sh
CMake/BarebonesCMakeProject/: CMakeLists.txt  TODOs.md  buildAndRun.ps1  buildAndRun.sh  cmake_init.ps1  cmake_init.sh  run.ps1  run.sh  updateSourceList.ps1  updateSourceList.sh
CMake/BarebonesCMakeProject/cmake/: sourceList.cmake
CMake/BarebonesCMakeProject/include/: foo.h  test.h
CMake/BarebonesCMakeProject/src/: foo.cpp  main.cpp  test.cpp
CMake/psScripts/: build.ps1  run.ps1
CMake/shScripts/: buildAndRun.sh  run.sh  updateSourceList.sh
MCU Programming/: README.md
Scripts/: CMakeLists.txt  TODO.md  projectBuilder.ps1  projectBuilder.sh
Scripts/Skunkworks/scripts/: addDefineFlags.ps1
Scripts/psScripts/: buildAndRun.ps1  clean.ps1  cmake_init.ps1  run.ps1  updateSourceList.ps1
Scripts/shScripts/: build.sh  buildAndRun.sh  clean.sh  cmake_init.sh  run.sh
hooo/akj/: CMakeLists.txt
